fix card height collapsing when no image is provided

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -224,6 +224,8 @@ a:hover {
 .card {
   position: relative;
   overflow: hidden;
+  width: 300px;
+  height: 300px;
   /* border-radius: 10px; */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   transition: transform 1.5s;
@@ -250,8 +252,8 @@ a:hover {
   position: absolute;
   top: 0;
   left: 0;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   display: flex;
   text-align: center;
   flex-direction: column;
